# context-mirror

./: COPYING  README.adoc  README.rst
bibtex/bst/context/: cont-ab.bst  cont-au.bst  cont-no.bst  cont-ti.bst
color/icc/context/: colorprofiles.xml
colors/icc/context/: colorprofiles.lua  colorprofiles.xml
colors/icc/profiles/: isocoated_v2_300_eci.icc  isocoated_v2_eci.icc
context/: texexec.ini
context/config/: texexec.rme
context/data/: conedt.gui  conedt.ini  cont-cs-scite.properties  cont-cz-scite.properties  cont-cz.tws  cont-cz.xml  cont-de-scite.properties  cont-de.tws  cont-de.xml  cont-en-scite.properties  cont-en.tws  cont-en.xml  cont-fr-scite.properties  cont-it-scite.properties  cont-it.tws  cont-it.xml  cont-nl-scite.properties  cont-nl.tws  cont-nl.xml  cont-pe-scite.properties  cont-ro-scite.properties  cont-ro.tws  cont-ro.xml  cont-xx-scite.properties  context-bbedit-cs.xml  context-bbedit-de.xml  context-bbedit-en.xml  context-bbedit-fr.xml  context-bbedit-it.xml  context-bbedit-nl.xml  context-bbedit-pe.xml  context-bbedit-ro.xml  context-jedit-base.xml  context-jedit-cs.xml  context-jedit-cz.xml  context-jedit-de.xml  context-jedit-en.xml  context-jedit-fr.xml  context-jedit-it.xml  context-jedit-nl.xml  (+9 more)
context/data/npp/: notepad++.ini
context/data/scite/: cscite.rme  (+36 more)
context/perltk/: cont_set.pm  fdf2tan.pl  fdf2tex.pl  makempy.pl  mptopdf.pl  texexec.ini  texexec.pl  texexec.rme  texfind.pl  texfont.pl  texshow.pl  texutil.pl
dvips/config/: context.map
fonts/fea/: verbose-digits.fea
metapost/context/: metafun.mp  mp-back.mp  mp-char.mp  mp-chart.mp  mp-core.mp  mp-form.mp  mp-func.mp  mp-grid.mp  mp-grph.mp  mp-page.mp  mp-shap.mp  mp-spec.mp  mp-symb.mp  mp-text.mp  mp-tool.mp
pdftex/config/: ec-youngryu-tx.map  original-bh-lucida.map  original-micropress-informal.map
source/luametatex/: CMakeLists.txt  CMakeSettings.json  build.cmd  build.sh  build.txt
source/luametatex/cmake/: debug.cmake  lua.cmake  luametatex.cmake  luaoptional.cmake  luarest.cmake  luasocket.cmake  mimalloc.cmake  mingw-32.cmake  mingw-64-ucrt.cmake  mingw-64.cmake  miniz.cmake  mp.cmake  pplib.cmake  tex.cmake
source/luametatex/source/: .gitignore  README  license.txt  luametatex.c  luametatex.h  readme.txt
source/luametatex/source/libraries/: readme.txt
source/luametatex/source/libraries/avl/: avl.c  avl.h  readme.txt
source/luametatex/source/libraries/decnumber/: decContext.h  decNumber.c  decNumber.h  decNumberLocal.h
source/luametatex/source/libraries/hnj/: hnjhyphen.c  hnjhyphen.h
source/luametatex/source/libraries/libcerf/: CHANGELOG  README.md  cerf.h  defs.h  erfcx.c  err_fcts.c  experimental.c  im_w_of_x.c  readme-luametatex.txt  w_of_z.c  width.c
source/luametatex/source/libraries/mimalloc/: CMakeLists.txt  readme.md
source/luametatex/source/libraries/mimalloc/include/: mimalloc-types.h
source/luametatex/source/libraries/mimalloc/src/: alloc-override.c  alloc-posix.c  alloc.c  arena.c  options.c  region.c  segment.c
source/luametatex/source/libraries/miniz/: ChangeLog.md  readme.txt
source/luametatex/source/libraries/pplib/: ppapi.h  ppcrypt.c  ppcrypt.h  readme.txt
source/luametatex/source/libraries/pplib/util/: utilflate.c  utilmemheap.c
source/luametatex/source/lua/: lmtcallbacklib.c  lmtcallbacklib.h  lmtenginelib.c  lmtenginelib.h  lmtfontlib.c  lmtfontlib.h  lmtinterface.c  lmtinterface.h  lmtlanguagelib.c  lmtlanguagelib.h  lmtlibrary.c  lmtlibrary.h  lmtluaclib.c  lmtluaclib.h  lmtlualib.c  lmtlualib.h  lmtmplib.c  lmtnodelib.c  lmtnodelib.h  lmtstatuslib.c  lmttexiolib.c  lmttexiolib.h  lmttexlib.c  lmttexlib.h  lmttokenlib.c  lmttokenlib.h
source/luametatex/source/luacore/: readme.txt
source/luametatex/source/luacore/lua54/: readme.txt
source/luametatex/source/luacore/lua54/originals/: lctype.h  patches.txt
source/luametatex/source/luacore/luapeg/: lptree.c  lptypes.h  lpvm.c  readme.txt
source/luametatex/source/luacore/luasocket/src/: options.c  usocket.c
source/luametatex/source/luaoptional/: lmtcerflib.c  lmtcurl.c  lmtforeign.c  lmtghostscript.c  lmtgraphicsmagick.c  lmthb.c  lmtimagemagick.c  lmtkpse.c  lmtlz4.c  lmtlzma.c  lmtlzo.c  lmtmujs.c  lmtmysql.c  lmtoptional.c  lmtoptional.h  lmtpostgress.c  lmtsqlite.c  lmtzint.c  lmtzstd.c  readme.txt
source/luametatex/source/luaoptional/cmake/mujs/: CMakeLists.txt  CMakeSettings.json
source/luametatex/source/luarest/: lmtaeslib.c  lmtbasexxlib.c  lmtdecodelib.c  lmtfilelib.c  lmtiolibext.c  lmtmd5lib.c  lmtoslibext.c  lmtpdfelib.c  lmtsha2lib.c  lmtsparselib.c  lmtstrlibext.c  lmtxcomplexlib.c  lmtxdecimallib.c  lmtxmathlib.c  lmtziplib.c
source/luametatex/source/mp/: readme.txt
source/luametatex/source/mp/mpc/: mp.c  mp.h  mpconfig.h  mpmath.c  mpmath.h  mpmathbinary.c  mpmathbinary.h  mpmathdecimal.c  mpmathdecimal.h  mpmathdouble.c  mpmathdouble.h  mpstrings.c  mpstrings.h
source/luametatex/source/mp/mpw/: mp.w  mpmath.w  mpmathbinary.w  mpmathdecimal.w  mpmathdouble.w  mpstrings.w
source/luametatex/source/tex/: texadjust.c  texadjust.h  texalign.c  texalign.h  texarithmetic.c  texarithmetic.h  texbuildpage.c  texbuildpage.h  texcommands.c  texcommands.h  texconditional.c  texconditional.h  texdirections.c  texdirections.h  texdumpdata.c  texdumpdata.h  texequivalents.c  texequivalents.h  texerrors.c  texerrors.h  texexpand.c  texexpand.h  texfileio.c  texfileio.h  texfont.c  texfont.h  texinputstack.c  texinputstack.h  texinserts.c  texinserts.h  texlanguage.c  texlanguage.h  texlegacy.c  texlinebreak.c  texlinebreak.h  texlocalboxes.c  texlocalboxes.h  texmainbody.c  texmainbody.h  texmaincontrol.c  (+31 more)
source/luametatex/source/utilities/: auxarithmetic.h  auxfile.c  auxfile.h  auxmemory.c  auxmemory.h  auxsparsearray.c  auxsparsearray.h  auxsystem.c  auxsystem.h  auxunistring.c  auxunistring.h  auxzlib.c  auxzlib.h
source/luametatex/tools/: mp.patch.lua  mtx-wtoc.lua
tex/context/: filenames.tex
tpm/: t-bib.tpm  u-texshow.tpm
web2c/: context.cnf  contextcnf.lua  readme.txt  texlive2011cnf.lua  texlive2013cnf.lua  texlivecnf.lua
(+7903 files in other folders)
